# stream

./: .env.example  .gitignore  docker-compose.local.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py
backend/app/core/: settings.py
backend/app/db/: session.py
backend/app/migrations/: env.py
backend/app/migrations/versions/: 0001_init.py  0002_drop_stream_state.py
backend/app/models/: __init__.py  models.py
backend/app/services/: live.py  live_playlist.py  s3.py  transcode.py
backend/tests/: test_live_playlist.py  test_transcode.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: api.ts  main.ts
frontend/src/pages/: Live.vue
